# NovelLanguageLearning

./: README.md
C#/CShaprLearning/: CShaprLearning.sln
C#/CShaprLearning/CShaprLearning/: AutoFacTest.cs  AutoRegister.cs  CRTPTest.cs  CShaprLearning.csproj  ExtensionTest.cs
C++/template/: BaseInfo.hpp  CMakeLists.txt  FoldExpression.hpp  LIST.hpp  MyTemplate.hpp  TMPStudy.hpp  TMPUtils.hpp  TemplateStudy.hpp  ToDoList.hpp  clang.cpp  main.cpp
Haskell/.history/some/: nameMatching_20200821130035.hs  nameMatching_20200821130038.hs  nameMatching_20200821130041.hs  nameMatching_20200821130046.hs  (+114 more)
Haskell/HaskellStudy.hsproj/: .uuid
Haskell/HaskellStudy.hsproj/HaskellStudy/: FunThink.hs  H.hs  HaskellStudy.cabal  Lib.hs  Main.hs  Question.hs  Shape.hs  _H.hsplay  _Question.hsplay
Haskell/HaskellStudy.hsproj/HaskellStudy/Type/: DataStruct.hs  Type.hs  TypeClass.hs  TypeClassSecond.hs  _DataStruct.hsplay  _TypeClass.hsplay  _TypeClassSecond.hsplay
Haskell/HaskellTest/: .gitignore  package.yaml
Haskell/Scheme.hsproj/: .uuid
Haskell/WhatIWishIKnewWhenLearningHaskell.hsproj/: .uuid
Haskell/some/: GlobRegex.hs  IO.hs  Todo.hs  args.hs  exception.hs
IO/: test.io
Lisp/: lisp_test.scm
Python/: same_var_in_inherit.py
Ruby/: compare_spec.rb  deepcopy_spec.rb  same_var_in_inherit_spec.rb  spec_spec.rb  test_vm.rb
Rust/Interpreter/: Cargo.toml
Rust/LearnNom/: Cargo.toml
Rust/src/: closure.rs  functional.rs  generic.rs  learn_trait.rs  main.rs  unstable_feature.rs
SML/Syntax/: about_smlnj.md  list.sml  main.sml  structure_and_type.sml
(+61 files in other folders)
